; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/ethernet/eth2ap/main/extr_ethernet_example_main.c_eth2wifi_flow_control_task.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/ethernet/eth2ap/main/extr_ethernet_example_main.c_eth2wifi_flow_control_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@flow_control_queue = common dso_local global i32 0, align 4
@FLOW_CONTROL_QUEUE_TIMEOUT_MS = common dso_local global i64 0, align 8
@pdTRUE = common dso_local global i64 0, align 8
@s_sta_is_connected = common dso_local global i64 0, align 8
@ESP_IF_WIFI_AP = common dso_local global i32 0, align 4
@FLOW_CONTROL_WIFI_SEND_TIMEOUT_MS = common dso_local global i64 0, align 8
@ESP_OK = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"WiFi send packet failed: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @eth2wifi_flow_control_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eth2wifi_flow_control_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %4, align 4
  store i64 0, i64* %5, align 8
  br label %6

6:                                                ; preds = %1, %55
  %7 = load i32, i32* @flow_control_queue, align 4
  %8 = load i64, i64* @FLOW_CONTROL_QUEUE_TIMEOUT_MS, align 8
  %9 = call i32 @pdMS_TO_TICKS(i64 %8)
  %10 = call i64 @xQueueReceive(i32 %7, %struct.TYPE_3__* %3, i32 %9)
  %11 = load i64, i64* @pdTRUE, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %55

13:                                               ; preds = %6
  store i64 0, i64* %5, align 8
  %14 = load i64, i64* @s_sta_is_connected, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %51

16:                                               ; preds = %13
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %51

20:                                               ; preds = %16
  br label %21

21:                                               ; preds = %40, %20
  %22 = load i64, i64* %5, align 8
  %23 = call i32 @pdMS_TO_TICKS(i64 %22)
  %24 = call i32 @vTaskDelay(i32 %23)
  %25 = load i64, i64* %5, align 8
  %26 = add nsw i64 %25, 2
  store i64 %26, i64* %5, align 8
  %27 = load i32, i32* @ESP_IF_WIFI_AP, align 4
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = call i32 @esp_wifi_internal_tx(i32 %27, i32 %29, i64 %31)
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %21
  %34 = load i32, i32* %4, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %33
  %37 = load i64, i64* %5, align 8
  %38 = load i64, i64* @FLOW_CONTROL_WIFI_SEND_TIMEOUT_MS, align 8
  %39 = icmp slt i64 %37, %38
  br label %40

40:                                               ; preds = %36, %33
  %41 = phi i1 [ false, %33 ], [ %39, %36 ]
  br i1 %41, label %21, label %42

42:                                               ; preds = %40
  %43 = load i32, i32* %4, align 4
  %44 = load i32, i32* @ESP_OK, align 4
  %45 = icmp ne i32 %43, %44
  br i1 %45, label %46, label %50

46:                                               ; preds = %42
  %47 = load i32, i32* @TAG, align 4
  %48 = load i32, i32* %4, align 4
  %49 = call i32 @ESP_LOGE(i32 %47, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %48)
  br label %50

50:                                               ; preds = %46, %42
  br label %51

51:                                               ; preds = %50, %16, %13
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = call i32 @free(i32 %53)
  br label %55

55:                                               ; preds = %51, %6
  br label %6
}

declare dso_local i64 @xQueueReceive(i32, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @pdMS_TO_TICKS(i64) #1

declare dso_local i32 @vTaskDelay(i32) #1

declare dso_local i32 @esp_wifi_internal_tx(i32, i32, i64) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i32) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
